--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -3,7 +3,7 @@
   width: 100vw;
   min-height: 100vh;
   background: var(--background);
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 #myVideo {
