--- a/src/Pages/LatestWork.css
+++ b/src/Pages/LatestWork.css
@@ -112,17 +112,42 @@ section h3:hover {
 @media screen and (min-width: 430px) and (max-width: 1400px) {
   section {
     min-width: 35vw;
+    min-height: 370px;
+  }
+
+  section > img {
+    width: 90%;
+  }
+
+  section img:hover {
+    transform: scale(0.9);
+  }
+  .projects-container {
+    margin-left: 0;
+    padding: 0;
+    background-size: contain;
+    overflow-x: scroll;
   }
 }
 
 @media screen and (min-width: 300px) and (max-width: 430px) {
   section {
     min-width: 100vw;
+    min-height: 360px;
   }
 
   .projects-container {
     margin-left: 0;
     padding: 0;
+    background-size: cover;
+    overflow-x: scroll;
+  }
+
+  section > img {
+    width: 90%;
+  }
+  section img:hover {
+    transform: scale(0.9);
   }
 }
 
