--- a/src/Pages/LatestWork.css
+++ b/src/Pages/LatestWork.css
@@ -128,6 +128,9 @@ section h3:hover {
     background-size: contain;
     overflow-x: scroll;
   }
+  .projects-container::-webkit-scrollbar {
+    display: none;
+}
 }
 
 @media screen and (min-width: 300px) and (max-width: 430px) {
@@ -141,6 +144,12 @@ section h3:hover {
     padding: 0;
     background-size: cover;
     overflow-x: scroll;
+  }
+
+  .projects-container::-webkit-scrollbar {
+    display: none;
+}
+
   }
 
   section > img {
