--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -70,7 +70,7 @@
   }
 
   .container-center {
-    background: red;
+    background: #000000;
   }
 }
 
@@ -80,7 +80,7 @@
   }
 
   .container-center {
-    background: red;
+    background: #2c2828;
   }
 
   .hero-title {
